Don't run test if feature was not enabled and remove warnings of missing flag.